refactor: change tests for lists